--- a/source/css/_form.css.scss
+++ b/source/css/_form.css.scss
@@ -15,7 +15,7 @@
     font-size: $fs-medium;
     text-transform: uppercase;
     display: block;
-    margin: 23px 0 12px 0;
+    margin: 18px 0 12px 0;
     font-weight: $fw-light;
   }
 }
