--- a/source/css/_general.css.scss
+++ b/source/css/_general.css.scss
@@ -58,7 +58,6 @@ body {
   width: 100%;
   height: 100%;
   position: relative;
-
   background-image: image-url('bkg-sunrise-xs.jpg');
   background-repeat: no-repeat;
   background-position: center top;
@@ -80,7 +79,6 @@ body {
   display: inline-block;
   text-indent: -9999px;
   vertical-align: middle;
-
   background-image: image-url('logo-tropical@2x.png');
   background-repeat: no-repeat;
   background-size: 200px 193px;
@@ -97,7 +95,6 @@ body {
   height: 226px;
   margin: 0 auto 20px auto;
   display: block;
-
   background-image: image-url('logo-porto-en@2x.png');
   background-repeat: no-repeat;
   background-size: 300px 226px;
@@ -121,7 +118,7 @@ body {
   width: 90%;
   line-height: $fs-large;
   display: block;
-  margin: 0 auto 15px auto;
+  margin: 0 auto 18px auto;
 }
 
 .event-info {
@@ -244,8 +241,8 @@ body {
 
   &:hover,
   &:focus {
-    color: $light;
-    @include scale(1.3);
+    // color: $light;
+    @include scale(1.1);
   }
 
   &:active { @include scale(.8); }
@@ -466,7 +463,6 @@ body {
   position: relative;
   bottom: 0;
   left: -105px;
-
   background-image: image-url('bkg-coconut-left@2x.png');
   background-repeat: no-repeat;
   background-size: 265px 350px;
@@ -480,7 +476,6 @@ body {
   position: absolute;
   opacity: 0;
   background-color: #2C97A4;
-
   @include bdr(100%);
   @include transition(top, 1s, linear, 0s);
 }
@@ -503,7 +498,6 @@ body {
   height: 200px;
   bottom: -20px;
   right: 160px;
-
   background-image: image-url('bkg-wave-tileable@2x.png');
   background-repeat: repeat-x;
   background-position: bottom right;
@@ -521,7 +515,6 @@ body {
   position: absolute;
   right: -70px;
   bottom: -20px;
-
   background-image: image-url('bkg-wave-right@2x.png');
   background-repeat: no-repeat;
   background-size: 230px 447px;
@@ -543,10 +536,8 @@ body {
     position: fixed;
     width: 170px;
     height: 170px;
-
     background-size: 100%;
     background-image: image-url('bkg-cfp@2x.png');
-
     @include transition(all, .2s, linear, 0s);
 
     &:hover, &:focus {
@@ -562,14 +553,12 @@ body {
       width: 100%;
       height: 100%;
       padding: 0.25em;
-
       color: $yellow;
       font-family: $ff-general;
       font-size: $fs-medium;
       font-weight: $fw-light;
       text-decoration: none;
       text-align: center;
-
       @include rotate(45deg);
 
       .title {
@@ -590,6 +579,9 @@ body {
     text-align: right;
     margin-right: 15px;
   }
+
+  .description-info { margin-bottom: 28px; }
+  .form-send-email .title-info { margin-top: 28px; }
 
   .social-item {
     &::before {
@@ -618,9 +610,13 @@ body {
 
   .talks { margin: 0; }
 
+  .talks-image {
+    margin-left: 15px;
+  }
+
   .talks-list {
     position: relative;
-    margin-left: 15px;
+    margin-left: 0;
     text-align: left;
   }
 
@@ -630,7 +626,7 @@ body {
     text-align: left;
 
 
-    &.avdi {
+    &.nick {
       position: absolute;
       top: 80px;
       left: 140px;
@@ -651,9 +647,7 @@ body {
   }
 
   .coconut { height: 350px;}
-
   .drop { top: 75%; }
-
   .coco {left: 37px;}
 
   .wave {
@@ -669,33 +663,43 @@ body {
 
 
 // Desktops
+@media (min-width: 992px) and (max-width: 1199px) {
+  .description-info { margin-bottom: 15px; }
+
+  .local-logo {
+    width: 262px;
+    height: 197px;
+    background-size: 262px 192px;
+    margin-bottom: 42px;
+  }
+
+  .btn.large.prospectus { width: 262px; }
+}
+
 @media (min-width: 992px) {
-  .local-logo { margin-bottom: 15px; }
+  .description-info {
+    max-width: 340px;
+    width: 80%;
+  }
 
    .form-send-email {
       .title-info { margin: 16px 0; }
    }
-
-  .description-info { width: 80%;}
 
   .organized {
     display: inline-block;
     margin: 0 100px 0 0;
   }
 
-  .past-events { margin-top: 0; }
-
   .support {
     min-width: 300px;
     display: inline-block;
   }
 
+  .past-events { margin-top: 0; }
   .coconut { left: -75px; }
-
   .drop { top: 80%; }
-
   .coco { left: 70px; }
-
   .wave { bottom: -74px; right: 150px; }
 
   .swell {
@@ -704,6 +708,10 @@ body {
   }
 }
 
+@media (min-width: 1200px) {
+  .description-info { margin-bottom: 19px }
+  .form-send-email { margin-top: 20px; }
+}
 
 // Large desktops
 @media (min-width: 1800px) {
