--- a/source/css/_structure.css.scss
+++ b/source/css/_structure.css.scss
@@ -13,11 +13,9 @@
 
   display: -webkit-box;
   display: -moz-box;
-
   display: -ms-flexbox;
   display: -webkit-flex;
   display: flex;
-
   -webkit-flex-flow: column;
   flex-flow: column;
 }
@@ -42,9 +40,9 @@
 .organization {
   position: relative;
   height: auto;
+  margin-top: 30px;
   min-height: 950px;
   z-index: 10;
-
   flex: 1;
   -webkit-flex: 1;
   -ms-flex: 1;
@@ -74,14 +72,12 @@
 
     &:nth-child(1) {
       width: 50%;
-
       -webkit-order: 2;
       order: 2;
     }
 
     &:nth-child(2) {
       width: 100%;
-
       margin-bottom: 0;
       -webkit-order: 1;
       order: 1;
@@ -89,7 +85,6 @@
 
     &:nth-child(3) {
       width: 50%;
-
       -webkit-order: 3;
       order: 3;
     }
@@ -115,7 +110,6 @@
       flex: 1;
       -webkit-flex: 1;
       -ms-flex: 1;
-
       -webkit-order: 1;
       order: 1;
     }
@@ -125,7 +119,6 @@
       margin-bottom: 0;
       -webkit-flex: .7;
       -ms-flex: .7;
-
       -webkit-order: 2;
       order: 2;
     }
@@ -134,14 +127,13 @@
       flex: 1;
       -webkit-flex: 1;
       -ms-flex: 1;
-
       -webkit-order: 3;
       order: 3;
     }
   }
 
   .organization {
-    margin-top: 70px;
+    margin-top: 30px;
     min-height: 500px;
   }
 
